fix: min-height for header on small devices.

--- a/components/Navigation/Navigation.css
+++ b/components/Navigation/Navigation.css
@@ -38,6 +38,7 @@
     min-height: 6rem;    
     flex-wrap: wrap; 
     height: fit-content;
+    min-height: max(max-content, 6rem);
   }
 }
 
